Use original line when looking for highlights in filter

Using the original line when looking for highlights avoids running into
trouble with html formating interfering with the highlights

BUG:153101